feat: re-add schedule

--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -11,6 +11,8 @@ on:
     paths:
       - '.github/workflows/docker-app-rest-passthrough.yml'
       - 'docker-apps/rest-passthrough/**'
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   app-version:
