--- a/docker-apps/rest-passthrough/package.json
+++ b/docker-apps/rest-passthrough/package.json
@@ -16,6 +16,7 @@
     "fastify": "^4.24.3"
   },
   "devDependencies": {
+    "@favware/cliff-jumper": "^2.2.3",
     "@swc/cli": "^0.1.63",
     "@swc/core": "^1.3.100",
     "dotenv": "^16.3.1"
