feat: add release script

--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -15,8 +15,24 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
+  run-release:
+    name: Run release script
+    runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Git config
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+      - name: Run release script
+        run: |
+          yarn release
+          git push && git push --tags
+
   app-version:
-    name: Update app version
+    name: Get app version
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.package-version.outputs.current-version }}
@@ -167,7 +183,7 @@ jobs:
 
   publish:
     name: Publish image
-    needs: [build-all-arch, app-version]
+    needs: [run-release, build-all-arch, app-version]
     if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' }}
     runs-on: ubuntu-latest
     permissions:
