feat: remove skillz and itoh from global codeowner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-*                          @discordeno/team @Skillz4Killz @itohatweb
+*                          @discordeno/team
 
 /.github/CODEOWNERS        @Skillz4Killz @itohatweb
 /.github/workflows/        @H01001000
