fix: missing checkout

--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -32,6 +32,8 @@ jobs:
     outputs:
       version: ${{ steps.package-version.outputs.current-version }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: get-npm-version
         id: package-version
         uses: martinbeentjes/npm-get-version-action@v1.3.1
