fix: feedback from H0

--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - 'main'
+    paths:
+      - '.github/workflows/docker-app-rest-passthrough.yml'
+      - 'docker-apps/rest-passthrough/**'
   pull_request:
   merge_group:
   schedule:
