--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -8,9 +8,7 @@ on:
       - '.github/workflows/docker-app-rest-passthrough.yml'
       - 'docker-apps/rest-passthrough/**'
   pull_request:
-    paths:
-      - '.github/workflows/docker-app-rest-passthrough.yml'
-      - 'docker-apps/rest-passthrough/**'
+  merge_group:
   schedule:
     - cron: '0 0 * * *'
 
@@ -37,6 +35,8 @@ jobs:
     outputs:
       version: ${{ steps.package-version.outputs.current-version }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: get-npm-version
         id: package-version
         uses: martinbeentjes/npm-get-version-action@v1.3.1
@@ -64,9 +64,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: false
-          tags:
-            - 'discordeno/app-rest-passthrough:latest'
-            - 'discordeno/app-rest-passthrough:v${{ needs.app-version.outputs.version }}'
+          tags: 'discordeno/app-rest-passthrough:latest, discordeno/app-rest-passthrough:v${{ needs.app-version.outputs.version }}'
           context: docker-apps/rest-passthrough
           target: runner
           outputs: type=docker,dest=/tmp/rest-passthrough-image.tar
@@ -80,7 +78,7 @@ jobs:
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: rest-passthrough-image
           path: /tmp/rest-passthrough-image.tar
@@ -164,10 +162,7 @@ jobs:
         with:
           context: docker-apps/rest-passthrough
           push: false
-          tags:
-            - 'discordeno/app-rest-passthrough:latest'
-            - 'discordeno/app-rest-passthrough:v${{ needs.app-version.outputs.version }}'
-
+          tags: 'discordeno/app-rest-passthrough:latest, discordeno/app-rest-passthrough:v${{ needs.app-version.outputs.version }}'
           # linux/s390x stuck at yarn install, remove it for now
           platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le
           target: runner
@@ -207,9 +202,7 @@ jobs:
         with:
           context: docker-apps/rest-passthrough
           push: true
-          tags:
-            - 'ghcr.io/discordeno/app-rest-passthrough:latest'
-            - 'ghcr.io/discordeno/app-rest-passthrough:v${{ needs.app-version.outputs.version }}'
+          tags: 'ghcr.io/discordeno/app-rest-passthrough:latest, ghcr.io/discordeno/app-rest-passthrough:v${{ needs.app-version.outputs.version }}'
           # linux/s390x stuck at yarn install, remove it for now
           platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le
           target: runner
