--- a/website/package.json
+++ b/website/package.json
@@ -13,43 +13,49 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "lint": "eslint src --ext ts,tsx",
+    "lint": "eslint . --ext js,ts,tsx",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,mdx}\"",
     "setup-dd": ""
   },
   "dependencies": {
     "@babel/plugin-syntax-flow": "^7.23.3",
-    "@docusaurus/core": "3.0.1",
-    "@docusaurus/preset-classic": "3.0.1",
-    "@easyops-cn/docusaurus-search-local": "^0.38.1",
+    "@docusaurus/core": "3.1.0",
+    "@docusaurus/preset-classic": "3.1.0",
+    "@docusaurus/theme-common": "^3.1.0",
+    "@easyops-cn/docusaurus-search-local": "^0.40.1",
     "@mdx-js/react": "^3.0.0",
     "babel-plugin-styled-components": "^2.1.4",
     "chart.js": "^4.4.1",
-    "clsx": "^2.0.0",
-    "prism-react-renderer": "^2.3.0",
+    "clsx": "^2.1.0",
+    "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "reactflow": "^11.10.1",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.6"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.0.1",
-    "@tsconfig/docusaurus": "^2.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "esbuild": "^0.19.8",
+    "@babel/core": "^7.23.7",
+    "@docusaurus/module-type-aliases": "^3.1.0",
+    "@docusaurus/tsconfig": "^3.1.0",
+    "@docusaurus/types": "^3.1.0",
+    "@types/babel__core": "^7",
+    "@types/react": "^18.2.47",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
+    "esbuild": "^0.19.11",
     "esbuild-loader": "^4.0.2",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^40.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-n": "^16.3.1",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.1.0",
-    "terser-webpack-plugin": "^5.3.9",
-    "typescript": "5.3.2"
+    "prettier": "^3.1.1",
+    "terser-webpack-plugin": "^5.3.10",
+    "typescript": "5.3.3",
+    "webpack": "^5.89.0"
   },
   "browserslist": {
     "production": [
@@ -64,6 +70,6 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18.0"
   }
 }
