Update contributing docs
remove howToUseTurborepo.md
update devcontainer
update task to remove error matcher
remove useless packages/rest/src/README.md
remove readme.hbs

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,8 @@
       "runOptions": {
         "runOn": "folderOpen",
         "instanceLimit": 1
-      }
+      },
+      "problemMatcher": []
     }
   ]
 }
