--- a/examples/reaction-roles/package.json
+++ b/examples/reaction-roles/package.json
@@ -8,16 +8,16 @@
   "packageManager": "yarn@4.0.2",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "swc src --delete-dir-on-start --out-dir dist",
+    "build": "swc src --strip-leading-paths --delete-dir-on-start --out-dir dist",
     "setup-dd": ""
   },
   "dependencies": {
     "@discordeno/bot": "19.0.0-next.d81b28a",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.63",
-    "@swc/core": "^1.3.102",
-    "@types/node": "^20.11.0"
+    "@swc/cli": "^0.3.9",
+    "@swc/core": "^1.4.0",
+    "@types/node": "^20.11.17"
   }
 }
