ci: labeler exclude dependabot and api-docs-commits

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -18,7 +18,7 @@ jobs:
 
   w_unverified_labeler:
     name: Add w-unverified Label
-    if: ${{ !(github.event_name == 'pull_request_target' && (github.event.action == 'edited' || github.event.action == 'synchronize')) }}
+    if: ${{ !(github.event_name == 'pull_request_target' && (github.event.action == 'edited' || github.event.action == 'synchronize' )) && !(github.event_name == 'issues' && contains(github.event.issue.labels.*.name, 'api-docs-commits')) && github.actor != 'dependabot[bot]'}}
     runs-on: ubuntu-latest
     steps:
       - run: gh issue edit "$NUMBER" --add-label "$LABELS"
