Check for multipart bodies and handle them
Also bump @discordeno/rest

--- a/docker-apps/rest-passthrough/package.json
+++ b/docker-apps/rest-passthrough/package.json
@@ -11,9 +11,10 @@
     "setup-dd": ""
   },
   "dependencies": {
-    "@discordeno/rest": "19.0.0-next.9006572",
+    "@discordeno/rest": "19.0.0-next.d81b28a",
     "@fastify/env": "^4.3.0",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/multipart": "^8.1.0",
     "fastify": "^4.26.2"
   },
   "devDependencies": {
