Do some code changes & run prettier and eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
   "root": true,
-  // This tells ESLint to load the config from the package `eslint-config-custom`
+  // This tells ESLint to load the config from the package `eslint-config-discordeno`
   "extends": ["discordeno"]
 }
