--- a/.github/workflows/commentBenchResult.yml
+++ b/.github/workflows/commentBenchResult.yml
@@ -72,7 +72,7 @@ jobs:
           echo "$MESSAGE" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
-      - name: "Comment on PR"
+      - name: 'Comment on PR'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
