--- a/.github/workflows/other-runtime-unit-test.yml
+++ b/.github/workflows/other-runtime-unit-test.yml
@@ -62,7 +62,7 @@ jobs:
           node-version: 18
       - uses: oven-sh/setup-bun@v1
         with:
-          bun-version: "1.0.6"
+          bun-version: '1.0.6'
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
