--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,6 +8,6 @@ nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-after-install.cjs
-    spec: "https://raw.githubusercontent.com/mhassan1/yarn-plugin-after-install/v0.5.0/bundles/@yarnpkg/plugin-after-install.js"
+    spec: 'https://raw.githubusercontent.com/mhassan1/yarn-plugin-after-install/v0.5.0/bundles/@yarnpkg/plugin-after-install.js'
 
 yarnPath: .yarn/releases/yarn-4.0.2.cjs
