--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "benchmark",
+  "name": "benchmarks",
   "version": "0.0.0",
-  "main": "./dist/esm/index.js",
+  "main": "./dist/index.js",
   "exports": {
-    "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.cjs",
+    "import": "./dist/index.js",
     "types": "./dist/types/index.d.ts"
   },
   "types": "./dist/types/index.d.ts",
@@ -29,9 +28,7 @@
     "@discordeno/rest": "19.0.0-alpha.1",
     "@discordeno/types": "19.0.0-beta.1",
     "@discordeno/utils": "19.0.0-beta.1",
-    "benchmark": "^2.1.4",
-    "microtime": "^3.1.1",
-    "node-fetch": "^3.3.2"
+    "benchmark": "^2.1.4"
   },
   "devDependencies": {
     "@swc/cli": "^0.3.9",
