--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -29,8 +29,7 @@
     "test:test-type": "tsc --project tsconfig.test.json"
   },
   "dependencies": {
-    "@discordeno/types": "19.0.0-beta.1",
-    "tweetnacl": "^1.0.3"
+    "@discordeno/types": "19.0.0-beta.1"
   },
   "devDependencies": {
     "@swc/cli": "^0.3.9",
