--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,4 @@
 {
   "extends": "tsconfig/base.json",
-  "compilerOptions": {
-    "outDir": "./dist"
-  },
-  "include": ["."],
-  "exclude": ["dist", "build", "node_modules"]
+  "include": ["."]
 }
