--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "nodejs-template",
+  "name": "dd-beginner-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
+  "description": "An example bot for beginner developers to start coding discord bots.",
+  "main": "dist/index.js",
+  "type": "module",
   "license": "ISC",
+  "private": true,
+  "packageManager": "yarn@4.0.2",
+  "scripts": {
+    "start": "node dist/index.js",
+    "build": "swc src --strip-leading-paths --delete-dir-on-start --out-dir dist",
+    "setup-dd": ""
+  },
   "dependencies": {
-    "discordeno.js": "github:meister03/discordeno.js",
-    "dotenv": "^16.0.3"
+    "@discordeno/bot": "19.0.0-next.ad7e74c",
+    "dd-cache-proxy": "^2.1.1",
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.5.25",
+    "@types/node": "^20.14.2",
+    "typescript": "^5.4.5"
   }
 }
