--- a/examples/starter/package.json
+++ b/examples/starter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dd-beginner-bot",
+  "name": "dd-starter-bot",
   "version": "1.0.0",
   "description": "An example bot for beginner developers to start coding discord bots.",
   "main": "dist/index.js",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@discordeno/bot": "19.0.0-next.ad7e74c",
     "chalk": "^5.3.0",
+    "dd-cache-proxy": "^2.1.1",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
