--- a/examples/bigbot/package.json
+++ b/examples/bigbot/package.json
@@ -1,51 +1,51 @@
 {
-	"name": "dd-big-bot",
-	"version": "1.0.0",
-	"main": "index.js",
-	"type": "module",
-	"scripts": {
-		"devbg": "npx prisma generate && tsc --watch",
-		"fmt": "eslint --fix \"src/**/*.ts*\"",
-		"devg": "nodemon --ignore ./src/bot/**/* --ignore ./src/rest/**/* --ignore ./dist/**/* -e ts dist/gateway/index.js",
-		"devr": "nodemon --ignore ./src/bot/**/* --ignore ./src/gateway/**/* --ignore ./dist/**/* -e ts dist/rest/index.js",
-		"devb": "nodemon --ignore ./src/rest/**/* --ignore ./src/gateway/**/* --ignore ./dist/**/* -e ts dist/bot/index.js",
-		"type": "tsc --noEmit",
-		"build": "swc --delete-dir-on-start src --out-dir dist",
-		"startr": "node dist/rest/index.js",
-		"startg": "node dist/gateway/index.js",
-		"startb": "node dist/bot/index.js"
-	},
-	"dependencies": {
-		"@influxdata/influxdb-client": "^1.29.0",
-		"@prisma/client": "^3.15.2",
-		"amqplib": "^0.10.3",
-		"colorette": "^2.0.19",
-		"discordeno": "^16.0.1",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.1",
-		"fastify": "^4.10.2",
-		"nanoid": "^4.0.0",
-		"node-fetch": "^3.2.10",
-		"web-worker": "^1.2.0"
-	},
-	"devDependencies": {
-		"@swc/cli": "^0.1.57",
-		"@swc/core": "^1.3.9",
-		"@types/amqplib": "^0.8.2",
-		"@types/express": "^4.17.13",
-		"@types/node": "^17.0.23",
-		"@types/ws": "^8.5.3",
-		"nodemon": "^2.0.15",
-		"prettier": "2.6.2",
-		"prisma": "^4.2.1",
-		"typescript": "^4.6.3"
-	},
-	"prettier": {
-		"trailingComma": "all",
-		"useTabs": true,
-		"tabWidth": 2,
-		"singleQuote": true,
-		"semi": true,
-		"printWidth": 120
-	}
+  "name": "dd-big-bot",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "devbg": "npx prisma generate && tsc --watch",
+    "fmt": "eslint --fix \"src/**/*.ts*\"",
+    "devg": "nodemon --ignore ./src/bot/**/* --ignore ./src/rest/**/* --ignore ./dist/**/* -e ts dist/gateway/index.js",
+    "devr": "nodemon --ignore ./src/bot/**/* --ignore ./src/gateway/**/* --ignore ./dist/**/* -e ts dist/rest/index.js",
+    "devb": "nodemon --ignore ./src/rest/**/* --ignore ./src/gateway/**/* --ignore ./dist/**/* -e ts dist/bot/index.js",
+    "type": "tsc --noEmit",
+    "build": "swc --delete-dir-on-start src --out-dir dist",
+    "startr": "node dist/rest/index.js",
+    "startg": "node dist/gateway/index.js",
+    "startb": "node dist/bot/index.js"
+  },
+  "dependencies": {
+    "@influxdata/influxdb-client": "^1.29.0",
+    "@prisma/client": "^3.15.2",
+    "amqplib": "^0.10.3",
+    "colorette": "^2.0.19",
+    "discordeno": "^16.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "fastify": "^4.10.2",
+    "nanoid": "^4.0.0",
+    "node-fetch": "^3.2.10",
+    "web-worker": "^1.2.0"
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.9",
+    "@types/amqplib": "^0.8.2",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.23",
+    "@types/ws": "^8.5.3",
+    "nodemon": "^2.0.15",
+    "prettier": "2.6.2",
+    "prisma": "^4.2.1",
+    "typescript": "^4.6.3"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "useTabs": false,
+    "tabWidth": 2,
+    "singleQuote": true,
+    "semi": false,
+    "printWidth": 120
+  }
 }
