--- a/examples/bigbot-19/.env.example
+++ b/examples/bigbot-19/.env.example
@@ -2,7 +2,7 @@
 # General Configurations
 #
 
-# For Prisma use, it should be a postgres connection url
+# Used by Prisma, it should be a postgres connection string
 # Template: postgres://[username]:[password]@[host]:[port]/[db]
 # Replate the [...] from the template with your values
 # TEMPLATE-SETUP: Add a postgres connection string
