--- a/examples/bigbot-19/package.json
+++ b/examples/bigbot-19/package.json
@@ -22,6 +22,7 @@
     "@discordeno/bot": "19.0.0-next.ad7e74c",
     "@fastify/multipart": "^8.3.0",
     "@influxdata/influxdb-client": "^1.33.2",
+    "@prisma/client": "^5.15.0",
     "amqplib": "^0.10.4",
     "fastify": "^4.27.0"
   },
@@ -30,6 +31,7 @@
     "@swc/core": "^1.5.25",
     "@types/amqplib": "^0.10.5",
     "@types/node": "^20.14.2",
+    "prisma": "^5.15.0",
     "typescript": "^5.4.5"
   }
 }
